----------------------------------------------------------------------
 OmegaT 2.5.5 update 1
----------------------------------------------------------------------
   1 Enhancement
   0 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.5.5 update 1 vs. 2.5.5

  Implemented requests:

  - Update JRE to 1.7 
 (full support for Khmer script rendering)
  http://sourceforge.net/support/tracker.php?aid=3542912

  Localisation updates:

  - Japanese localization updated to 2.5.5 (UI)

----------------------------------------------------------------------
 OmegaT 2.5.5 
----------------------------------------------------------------------
   3 Enhancements
   5 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
2.5.5 vs. 2.5.4 update 1

  Implemented requests:

  - Option to not load translations=source from source documents
  http://sourceforge.net/support/tracker.php?aid=3527626

  Other enhancements:

  - Revised manual

  - Fastest computation of Match Statistics. 
In addition, the first two lines are displayed as soon as they are computed

  Bug fixes:

  - Windows installer: the user language was always set in OmegaT.l4J.ini,
regardless of the choice of the user

  - Windows installer with Java: some languages not supported by OmegaT were
listed

  - Recognize single quotes in ENTITY of DTD file filter
  http://sourceforge.net/support/tracker.php?aid=3520305
(It was already implemented in 2.3 update 8, but had not been ported
to 2.5.)

  - Java Webstart was not working with Java 1.7

  - When one of the languages is an RTL language, or where setting the Editor
in RTL mode with Shift+Ctrl+O, spaces could be wrongly located. As a workaround, 
tags are not displayed in grey when translating an RTL language is involved or when
the Editor is in RTL mode.

  Localisation updates:

  - Russian localisation updated to 2.5.4 update 1 (UI, Instant Start)
